API Create Hosts
